--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "populate": "node db/populate.js"
   },
   "keywords": [],
   "author": "",
